fixed nowrap

--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,10 @@ main {
   font-family: Helvetica, Arial, Sans, sans-serif;
 }
 
+strong {
+  white-space:nowrap;
+}
+
 h1, .user-count {
   margin: 0;
   padding: 10px 0;
@@ -37,7 +41,6 @@ h1, .user-count {
   background: white;
   padding: 5px 10px;
   word-wrap: break-word;
-  white-space:nowrap;
 }
 
 .chat p {
